Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
dev
-
None
-
-
526cef4d2 (dev)
Description
I'm attempting again to update MinGW to 13.1.0 in Coin (Windows 10/11 22H2 x86_64).
The source files are downloaded/cached from here:
https://github.com/niXman/mingw-builds-binaries/releases
Direct link:
Coin run:
https://testresults.qt.io/coin/integration/qt/qt5/tasks/web_qt_qt5_1692175916919
Build fails at qt/qtdeclarative: log
C:/Users/qt/work/qt/qtdeclarative/src/qml/memory/qv4stacklimits.cpp agent:2023/08/16 13:30:08 build.go:405: In file included from C:/MINGW_PATH/mingw64/x86_64-w64-mingw32/include/winnt.h:27, agent:2023/08/16 13:30:08 build.go:405: from C:/MINGW_PATH/mingw64/x86_64-w64-mingw32/include/minwindef.h:163, agent:2023/08/16 13:30:08 build.go:405: from C:/MINGW_PATH/mingw64/x86_64-w64-mingw32/include/windef.h:9, agent:2023/08/16 13:30:08 build.go:405: from C:/MINGW_PATH/mingw64/x86_64-w64-mingw32/include/windows.h:69, agent:2023/08/16 13:30:08 build.go:405: from C:/Users/qt/work/install/include/QtCore/qt_windows.h:28, agent:2023/08/16 13:30:08 build.go:405: from C:/Users/qt/work/qt/qtdeclarative/src/qml/memory/qv4stacklimits.cpp:15: agent:2023/08/16 13:30:08 build.go:405: In function 'long long unsigned int __readgsqword(long unsigned int)', agent:2023/08/16 13:30:08 build.go:405: inlined from '_TEB* NtCurrentTeb()' at C:/MINGW_PATH/mingw64/x86_64-w64-mingw32/include/winnt.h:10013:86, agent:2023/08/16 13:30:08 build.go:405: inlined from 'QV4::StackProperties QV4::stackProperties()' at C:/Users/qt/work/qt/qtdeclarative/src/qml/memory/qv4stacklimits.cpp:152:62: agent:2023/08/16 13:30:08 build.go:405: C:/MINGW_PATH/mingw64/x86_64-w64-mingw32/include/psdk_inc/intrin-impl.h:838:1: error: array subscript 0 is outside array bounds of 'long long unsigned int [0]' [-Werror=array-bounds=] agent:2023/08/16 13:30:08 build.go:405: 838 | __buildreadseg(__readgsqword, unsigned __int64, "gs", "q") agent:2023/08/16 13:30:08 build.go:405: | ^~~~~~~~~~~~~~ agent:2023/08/16 13:30:08 build.go:405: In function 'QV4::StackProperties QV4::stackProperties()': agent:2023/08/16 13:30:08 build.go:405: cc1plus.exe: note: source object is likely at address zero agent:2023/08/16 13:30:08 build.go:405: cc1plus.exe: all warnings being treated as errors
I had a passed Coin run with MinGW 13.1.0 and QtCore 6.6.0 if that's relevant or helpful to know:
http://coin.ci.qt.io/coin/integration/qt/qt5/tasks/web_qt_qt5_1688460074218
Attachments
Issue Links
- is required for
-
QTQAINFRA-5045 Update MinGW used in CI
-
- Closed
-