Warnings: Suppress MinGW warning about out of bounds array access

Fixes: QTBUG-116179
Change-Id: Ib32877fde13084a35c894aa2f00f2500b9ba7937
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>