src/qml/memory/qv4stacklimits.cpp
@@ -147,12 +147,19 @@ StackProperties stackProperties()
 static_assert(Q_STACK_GROWTH_DIRECTION < 0);
 StackProperties stackProperties()
 {
+    // MinGW complains about out of bounds array access in compiler headers
+    QT_WARNING_PUSH
+    QT_WARNING_DISABLE_GCC("-Warray-bounds")
+
     // Get the stack base.
 #  ifdef _WIN64
     PNT_TIB64 pTib = reinterpret_cast<PNT_TIB64>(NtCurrentTeb());
 #  else
     PNT_TIB pTib = reinterpret_cast<PNT_TIB>(NtCurrentTeb());
 #  endif
+
+    QT_WARNING_POP
+
     quint8 *stackBase = reinterpret_cast<quint8 *>(pTib->StackBase);
 
     // Get the stack limit. tib->StackLimit is the size of the
